# stm32-imc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: toolchain-stm32.cmake  toolchain-tests.cmake  utils.cmake
cmake/flags/: common.cmake  stm32.cmake  tests.cmake
imc-example/: .cproject  .gitignore  .project  CMakeLists.txt  stm32_flash.ld
imc-example/src/: main.cpp  stm32f1xx_it.c  stm32f1xx_it.h
stm32-imc/: .cproject  .project  CMakeLists.txt
stm32-imc/include/containers/: DynamicArray.hpp  Span.hpp  StaticVector.hpp  TripleBuffer.hpp  UnorderedRingBuffer.hpp
stm32-imc/include/imc/: ImcMasterControl.hpp  ImcProtocol.hpp  ImcReceiver.hpp  ImcRecipient.hpp  ImcSender.hpp  ImcSettings.hpp  ImcSlaveControl.hpp  InterMcuCommunicationModule.hpp  UartLock.hpp
stm32-imc/include/misc/: Assert.hpp  Callback.hpp  Macro.hpp  Meta.hpp
stm32-imc/include/peripheral/: Button.hpp  CrcBase.hpp  GpioBase.hpp  InterruptTimerBase.hpp  Pins.hpp  UartBase.hpp  UsTimerBase.hpp
stm32-peripherals/: .cproject  .project  CMakeLists.txt
stm32-peripherals/Libraries/CMSIS/Device/ST/STM32F10x/Include/: stm32f10x.h
stm32-peripherals/include/stm32/peripheral/: Crc.hpp  Gpio.hpp  InterruptTimer.hpp  Irq.h  Uart.hpp  UsTimer.hpp
stm32-peripherals/src/: Gpio.cpp  InterruprTimer.cpp  Uart.cpp  UsTimer.cpp
tests/: .cproject  CMakeLists.txt
tests/include/tests/: framework.cpp  framework.hpp
tests/src/: InterMcuCommunicationModuleTests.cpp  MetaTests.cpp  TripleBufferTests.cpp  UnorderedRingBufferTests.cpp  framework.cpp  main.cpp
